Deploy latest version of PFS documents 76ac673576d91af171bc739d856a0a1034e121e6

--- a/latest/SAR-NRB.html
+++ b/latest/SAR-NRB.html
@@ -365,7 +365,7 @@ Authors</h2>
 <dl>
 <dt>ALE</dt>
 <dd>
-Absolute geolocation error
+Absolute Geolocation Error
 </dd>
 </dl>
 <!-- edit:glossary/atbd.yaml -->
