Deploy latest version of PFS documents 0787509ea0eb9b0ed89f9b6ee1954130fc25088b

--- a/latest/SAR-POL.html
+++ b/latest/SAR-POL.html
@@ -1199,9 +1199,14 @@ backscatter. The terrain-flattened
 is best understood as
 <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msup><mi>β</mi><mn>0</mn></msup><annotation encoding="application/x-tex">\beta^0</annotation></semantics></math>
 divided by the local scattering area.</p>
-<p>File format specifications/contents provided in metadata: - Sample
-Type (Scattering Area) - Data Format (GeoTIFF, HDF5, NetCDF, …) - Data
-Type (Int, Float, …) - Bits per Sample - Byte Order</p>
+<p>File format specifications/contents provided in metadata:</p>
+<ul>
+<li>Sample Type (Scattering Area)</li>
+<li>Data Format (GeoTIFF, HDF5, NetCDF, …)</li>
+<li>Data Type (Int, Float, …)</li>
+<li>Bits per Sample</li>
+<li>Byte Order</li>
+</ul>
 <hr />
 <h4 data-label="|Per-Pixel Metadata: Local Incident Angle Image" id="sec:pxl.per-pixel-local-incident-angle"><!-- edit:requirements/per-pixel/local-incident-angle.yaml--><code>4.5.</code>
 Per-Pixel Metadata: Local Incident Angle Image</h4>
