Deploy latest version of PFS documents 6a6a28d29ae48a1b77ee6db0089f24c50167d526

--- a/latest/SAR-POL.html
+++ b/latest/SAR-POL.html
@@ -1233,6 +1233,8 @@ model could be used for the calculation of the local incident angle</li>
 Per-Pixel Metadata: Ellipsoidal Incident Angle Image</h4>
 <p>Identifier: <code>pxl.per-pixel-ellipsoidal-incident-angle</code></p>
 <h5 id="threshold-requirements-35">Threshold requirements:</h5>
+<p><em>None</em></p>
+<h5 id="goal-requirements-35">Goal requirements:</h5>
 <p>Ellipsoidal incident angle is provided.</p>
 <p>File format specifications/contents provided in metadata:</p>
 <ul>
@@ -1245,11 +1247,10 @@ Per-Pixel Metadata: Ellipsoidal Incident Angle Image</h4>
 </ul>
 <p>Notes:</p>
 <ol type="1">
-<li>For maritime ORB scenes when no land areas are covered, a geoid
-model could be used for the calculation of the local incident angle</li>
+<li>For maritime ORB scenes when no land areas are covered, the
+ellipsoidal incident angle is nearly identical to the geoid based local
+incident angle.</li>
 </ol>
-<h5 id="goal-requirements-35">Goal requirements:</h5>
-<p><em>None</em></p>
 <hr />
 <h4 data-label="|Per-Pixel Metadata: Noise Power Image" id="sec:pxl.per-pixel-noise-power"><!-- edit:requirements/per-pixel/noise-power.yaml--><code>4.7.</code>
 Per-Pixel Metadata: Noise Power Image</h4>
