Deploy latest version of PFS documents 8fdadd2c6543e596683581037b12518ec5575a77

--- a/latest/SAR-GSLC.html
+++ b/latest/SAR-GSLC.html
@@ -1404,9 +1404,9 @@ Radiometrically Corrected Measurements: Cloud Optimized Formats</h4>
 <h5 id="goal-requirements-45">Goal requirements:</h5>
 <p>All files are provided using cloud-optimized file formats.</p>
 <hr />
-<h4 data-label="|Radiometrically Corrected Measurements: Backscatter Measurements [GSLC]" id="sec:rcm.measurements-backscatter-gslc"><!-- edit:requirements/measurements/backscatter-gslc.yaml--><code>5.2.</code>
+<h4 data-label="|Radiometrically Corrected Measurements: Backscatter Measurements (GSLC)" id="sec:rcm.measurements-backscatter-gslc"><!-- edit:requirements/measurements/backscatter-gslc.yaml--><code>5.2.</code>
 Radiometrically Corrected Measurements: Backscatter Measurements
-[GSLC]</h4>
+(GSLC)</h4>
 <p>Identifier: <code>rcm.measurements-backscatter-gslc</code></p>
 <h5 id="threshold-requirements-46">Threshold requirements:</h5>
 <p>Radiometric and Phase Terrain-flattened Gamma-Nought backscatter
@@ -1514,11 +1514,15 @@ Geometric Corrections: Geometric Correction Algorithm</h4>
 <h5 id="threshold-requirements-51">Threshold requirements:</h5>
 <p><em>None</em></p>
 <h5 id="goal-requirements-51">Goal requirements:</h5>
-<p>Metadata references, e.g.: - A metadata citable peer-reviewed
-algorithm - Technical documentation regarding the implementation of that
-algorithm expressed as URLs or DOIs - The sources of auxiliary data used
-to make corrections - Resampling method used for geometric processing of
-the source data</p>
+<p>Metadata references, e.g.:</p>
+<ul>
+<li>A metadata citable peer-reviewed algorithm</li>
+<li>Technical documentation regarding the implementation of that
+algorithm expressed as URLs or DOIs</li>
+<li>The sources of auxiliary data used to make corrections</li>
+<li>Resampling method used for geometric processing of the source
+data</li>
+</ul>
 <p>Notes:</p>
 <ol type="1">
 <li>Examples of technical documentation can include e.g., an Algorithm
