--- a/latest/SAR-NRB.html
+++ b/latest/SAR-NRB.html
@@ -1309,9 +1309,9 @@ Radiometrically Corrected Measurements: Cloud Optimized Formats</h4>
 <h5 id="goal-requirements-40">Goal requirements:</h5>
 <p>All files are provided using cloud-optimized file formats.</p>
 <hr />
-<h4 data-label="|Radiometrically Corrected Measurements: Backscatter Measurements [NRB]" id="sec:rcm.measurements-backscatter-nrb"><!-- edit:requirements/measurements/backscatter-nrb.yaml--><code>5.2.</code>
+<h4 data-label="|Radiometrically Corrected Measurements: Backscatter Measurements (NRB)" id="sec:rcm.measurements-backscatter-nrb"><!-- edit:requirements/measurements/backscatter-nrb.yaml--><code>5.2.</code>
 Radiometrically Corrected Measurements: Backscatter Measurements
-[NRB]</h4>
+(NRB)</h4>
 <p>Identifier: <code>rcm.measurements-backscatter-nrb</code></p>
 <h5 id="threshold-requirements-41">Threshold requirements:</h5>
 <p>“Terrain-flattened” Radiometrically Terrain Corrected (RTC)
@@ -1446,11 +1446,15 @@ Geometric Corrections: Geometric Correction Algorithm</h4>
 <h5 id="threshold-requirements-47">Threshold requirements:</h5>
 <p><em>None</em></p>
 <h5 id="goal-requirements-47">Goal requirements:</h5>
-<p>Metadata references, e.g.: - A metadata citable peer-reviewed
-algorithm - Technical documentation regarding the implementation of that
-algorithm expressed as URLs or DOIs - The sources of auxiliary data used
-to make corrections - Resampling method used for geometric processing of
-the source data</p>
+<p>Metadata references, e.g.:</p>
+<ul>
+<li>A metadata citable peer-reviewed algorithm</li>
+<li>Technical documentation regarding the implementation of that
+algorithm expressed as URLs or DOIs</li>
+<li>The sources of auxiliary data used to make corrections</li>
+<li>Resampling method used for geometric processing of the source
+data</li>
+</ul>
 <p>Notes:</p>
 <ol type="1">
 <li>Examples of technical documentation can include e.g., an Algorithm
