--- a/latest/SAR-POL.html
+++ b/latest/SAR-POL.html
@@ -1362,9 +1362,9 @@ Radiometrically Corrected Measurements: Cloud Optimized Formats</h4>
 <h5 id="goal-requirements-40">Goal requirements:</h5>
 <p>All files are provided using cloud-optimized file formats.</p>
 <hr />
-<h4 data-label="|Radiometrically Corrected Measurements: Backscatter Measurements [POL]" id="sec:rcm.measurements-backscatter-pol"><!-- edit:requirements/measurements/backscatter-pol.yaml--><code>5.2.</code>
+<h4 data-label="|Radiometrically Corrected Measurements: Backscatter Measurements (POL)" id="sec:rcm.measurements-backscatter-pol"><!-- edit:requirements/measurements/backscatter-pol.yaml--><code>5.2.</code>
 Radiometrically Corrected Measurements: Backscatter Measurements
-[POL]</h4>
+(POL)</h4>
 <p>Identifier: <code>rcm.measurements-backscatter-pol</code></p>
 <h5 id="threshold-requirements-41">Threshold requirements:</h5>
 <p>Measurements can be one of the following types or both:</p>
@@ -1510,11 +1510,15 @@ Geometric Corrections: Geometric Correction Algorithm</h4>
 <h5 id="threshold-requirements-47">Threshold requirements:</h5>
 <p><em>None</em></p>
 <h5 id="goal-requirements-47">Goal requirements:</h5>
-<p>Metadata references, e.g.: - A metadata citable peer-reviewed
-algorithm - Technical documentation regarding the implementation of that
-algorithm expressed as URLs or DOIs - The sources of auxiliary data used
-to make corrections - Resampling method used for geometric processing of
-the source data</p>
+<p>Metadata references, e.g.:</p>
+<ul>
+<li>A metadata citable peer-reviewed algorithm</li>
+<li>Technical documentation regarding the implementation of that
+algorithm expressed as URLs or DOIs</li>
+<li>The sources of auxiliary data used to make corrections</li>
+<li>Resampling method used for geometric processing of the source
+data</li>
+</ul>
 <p>Notes:</p>
 <ol type="1">
 <li>Examples of technical documentation can include e.g., an Algorithm
